@@ -2,7 +2,7 @@ sdparm (1.08-0.1) unstable; urgency=low
 
   * see ChangeLog
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Fri, 26 Oct 2012 19:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Fri, 14 Dec 2012 10:00:00 +1100
 
 sdparm (1.07-0.1) unstable; urgency=low
 
